--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -4,7 +4,11 @@
   background-color: rgba(0, 0, 0, 0.238);
   margin: auto;
   border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(7, 131, 221, 0.719),
+    0 6px 20px 0 rgba(12, 126, 163, 0.19);
 }
-.login_card:hover {
-  box-shadow: 1px 1px 1px 1px rgba(80, 102, 227, 0.581);
+.body_background {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(40, 39, 39);
 }
