--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,21 +1,21 @@
 .login_card {
   width: 300px;
   height: 350px;
-  background-color: rgba(0, 0, 0, 0.238);
+  background-color: rgb(233, 233, 233);
   margin: auto;
   border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(7, 131, 221, 0.719),
+  box-shadow: 0 4px 8px 0 rgba(57, 57, 57, 0.719),
     0 6px 20px 0 rgba(12, 126, 163, 0.19);
 }
 .body_background {
   width: 100%;
   height: 100vh;
-  background-color: rgb(40, 39, 39);
+  background-color: rgb(255, 255, 255);
   display: flex;
   justify-content: center;
 }
 .login_input {
-  background-color: rgb(51, 51, 51);
+  background-color: rgb(255, 255, 255);
   width: 80%;
   height: 30px;
   margin-left: 10%;
@@ -24,12 +24,12 @@
   margin-bottom: 15px;
   border-radius: 5px;
   border: none;
-  color: #fff;
+  color: #000000;
 }
 .login_heading {
   display: flex;
   justify-content: center;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   padding-top: 40px;
   padding-bottom: 20px;
   font-size: 24px;
@@ -41,17 +41,19 @@
   width: 80%;
   height: 40px;
   border-radius: 5px;
-  background-color: rgba(149, 0, 255, 0.723);
+  background-color: rgba(8, 0, 255, 0.723);
   border: none;
   color: #fff;
   padding-top: 10px;
   margin-top: 20px;
+  box-shadow: 0 2px 4px 0 rgba(98, 98, 99, 0.719),
+
 }
 .login_button:hover {
-  box-shadow: 0 4px 8px 0 rgba(1, 149, 255, 0.719),
+  box-shadow: 0 4px 8px 0 rgba(98, 98, 99, 0.719),
     0 6px 20px 0 rgba(12, 126, 163, 0.19);
 }
 .login_button:active {
-  box-shadow: 0 2px 4px 0 rgba(1, 149, 255, 0.719),
+  box-shadow: 0 2px 4px 0 rgba(31, 31, 31, 0.719),
     0 3px 10px 0 rgba(12, 126, 163, 0.19);
 }
