--- a/src/components/auth/privateRoutes.css
+++ b/src/components/auth/privateRoutes.css
@@ -3,3 +3,10 @@
   background-color: aliceblue;
   height: 100vh;
 }
+.layout-content {
+  background-color: rgb(255, 255, 255);
+  width: 100rem;
+  margin: 10px;
+  border-radius: 5px;
+  box-shadow: 5px 10px 18px rgb(88, 88, 88);
+}
