--- a/src/components/auth/privateRoutes.css
+++ b/src/components/auth/privateRoutes.css
@@ -1,7 +1,7 @@
 .layout-container {
   display: flex;
-  background-color: aliceblue;
-  height: 100vh;
+  background-color: rgb(12, 113, 202);
+  height: auto;
 }
 .layout-content {
   background-color: rgb(255, 255, 255);
@@ -9,4 +9,5 @@
   margin: 10px;
   border-radius: 5px;
   box-shadow: 5px 10px 18px rgb(88, 88, 88);
+  height: 100%;
 }
