--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -2,3 +2,13 @@
   width: 20%;
   background-color: rgb(255, 255, 255);
 }
+h1{
+  display: flex;
+}
+
+#red{
+  color: rgb(255, 0, 0);
+}
+#land{
+  color:rgb(0, 255, 0)
+}
